--- a/package.json
+++ b/package.json
@@ -5,30 +5,20 @@
   "author": "Austin Garrard <agarrard@thoughtworks.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist/ && babel src/ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && node dist/index.js",
     "test": "./node_modules/karma/bin/karma start"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "jasmine": "^2.8.0",
     "karma": "^2.0.0",
-    "karma-babel-preprocessor": "^7.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.9",
-    "rimraf": "^2.6.2",
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "lodash": "latest",
+    "lodash": "^4.17.4",
     "rxjs": "^5.5.6"
   }
 }
